imperative-tests/tests/variable_checks/missing_in_opcode.stderr
error: Variable Ident { ident: "w", span: #0 bytes(107..108) } (with symbol: 'w') declared but never used in opcode.
 --> $DIR/missing_in_opcode.rs:6:11
  |
6 |     Instr{w:u8},
  |           ^
